--- a/dom/push/test/mochitest.ini
+++ b/dom/push/test/mochitest.ini
@@ -4,6 +4,7 @@ support-files =
   worker.js
   push-server.sjs
   frame.html
+  webpush.js
 
 [test_has_permissions.html]
 skip-if = os == "android" || toolkit == "gonk"
@@ -20,4 +21,6 @@ skip-if = os == "android" || toolkit == "gonk"
 [test_multiple_register_different_scope.html]
 skip-if = os == "android" || toolkit == "gonk"
 [test_try_registering_offline_disabled.html]
+skip-if = os == "android" || toolkit == "gonk"
+[test_data.html]
 skip-if = os == "android" || toolkit == "gonk"
