--- a/devtools/client/webconsole/test/mochitest/browser.ini
+++ b/devtools/client/webconsole/test/mochitest/browser.ini
@@ -326,6 +326,7 @@ subsuite = clipboard
 [browser_webconsole_execution_scope.js]
 [browser_webconsole_external_script_errors.js]
 [browser_webconsole_file_uri.js]
+[browser_webconsole_filter_buttons_overflow.js]
 skip-if = true #	Bug 1404382
 [browser_webconsole_filter_by_input.js]
 [browser_webconsole_filter_scroll.js]
