--- a/js/src/old-configure.in
+++ b/js/src/old-configure.in
@@ -1365,7 +1365,7 @@ dnl = Enable using the clang plugin to build
 dnl ========================================================
 
 if test -n "$COMPILE_ENVIRONMENT"; then
-MOZ_CONFIG_CLANG_PLUGIN
+MOZ_CONFIG_CLANG_STATIC_ANALYZER
 fi # COMPILE_ENVIRONMENT
 
 dnl ========================================================
